Fixing minor spacing issue on nav-ribbon due to the font.

--- a/styles.css
+++ b/styles.css
@@ -234,6 +234,7 @@ nav {
 #navmenu {
 	font-family: "Space Age", sans-serif;
 	font-size: 200%;
+	line-height: 80%;
 	top: 0;
 	left: 0;
 	width: 100%;
